# TRACE-PV

./: CMakeLists.txt  README.md  tracepv_main.cpp
backup/: IVcurve copy.cpp  allocate_single_gpu.cu
benchmark/MATLAB/: CMakeLists.txt  Makefile  TRACE_PV.code-workspace  Two_Level_SVM_No_PV_No_Control_Average_Benchmark_v2.slxc  Two_Level_SVM_No_PV_No_Control_Sw_Benchmark_v2.slxc  clusterMerging-Copy1.cpp  clusterMerging.cpp  generateSamples.cpp  main  main.bk  main.cpp  output.txt  perfom.txt  result.txt  run.sh  scripts.m  simulation.cpp  simulation.h  simulation_v1.cpp  simulation_v2.cpp  test  test.cpp  test.m
benchmark/MATLAB/slprj/_jitprj/: sCpOBGsXNtx6LEKugdfvySH.l  sCpOBGsXNtx6LEKugdfvySH.mat  ss1LVnwWRaoiELnQWVCVfsE.l  ss1LVnwWRaoiELnQWVCVfsE.mat  ssk5INjcWILKIhGttlYICAB.l  ssk5INjcWILKIhGttlYICAB.mat
benchmark/MATLAB/slprj/_sfprj/EMLReport/: sCezH1JL5ECa5K2qabck9MB.mat  sCpOBGsXNtx6LEKugdfvySH.mat  ss1LVnwWRaoiELnQWVCVfsE.mat  ssk5INjcWILKIhGttlYICAB.mat
benchmark/MATLAB/slprj/_sfprj/Two_Level_SVM_No_PV_No_Control_Sw_Benchmark_v2/: amsi_serial.mat
benchmark/MATLAB/slprj/_sfprj/Two_Level_SVM_No_PV_No_Control_Sw_Benchmark_v2/_self/sfun/info/: binfo.mat
benchmark/MATLAB/slprj/_sfprj/precompile/: 9mbmVqZuczDMIhBm8WwcOD.mat  B9RZoXrRgKvudNPvmeEvWG.mat  HNBegWwRJ0OS0AmScvRrqH.mat  ZypkY0ZC7btNvp8rdlI3H.mat  rn9g7HpsW7NXLnAL67aVEE.mat  ywofX4Yxvgx87SvezrwcEG.mat
benchmark/MATLAB/slprj/sim/varcache/Two_Level_SVM_No_PV_No_Control_Average_Benchmark_v2/: checksumOfCache.mat  varInfo.mat
benchmark/MATLAB/slprj/sim/varcache/Two_Level_SVM_No_PV_No_Control_Average_Benchmark_v2/tmwinternal/: simulink_cache.xml
benchmark/MATLAB/slprj/sim/varcache/Two_Level_SVM_No_PV_No_Control_Sw_Benchmark_v2/: checksumOfCache.mat  varInfo.mat
benchmark/MATLAB/slprj/sim/varcache/Two_Level_SVM_No_PV_No_Control_Sw_Benchmark_v2/tmwinternal/: simulink_cache.xml
example/batch-gpu/: batch_gpu  batch_gpu.cu
example/mpi-cuda/: compile.sh  multi_gpu  multi_gpu.cu
example/multi-gpu/: multi-gpu  test.cu
include/cpp/: tracepv_header.h  tracepv_parameters.h
lib/: a.out  data.json  load.cpp  test.cpp
mission_profile/: ottare_pv_farm_mission_profile_5min.csv
model/: Two_Level_SVM_No_PV_No_Control_Average_Benchmark_v2.slx  Two_Level_SVM_No_PV_No_Control_Average_Benchmark_v2.slxc  Two_Level_SVM_No_PV_No_Control_Sw_Benchmark_v2.slx
src/.ipynb_checkpoints/: Makefile-checkpoint  main-checkpoint.cpp  perfom-checkpoint.txt  simulation-checkpoint.cpp  simulation-checkpoint.h
src/cpp/: tracepv_ivcurve.cpp
src/simulation/: a2s_cluster_merging.cpp  a2s_cuda_allocate.cu  a2s_cuda_main.cpp
src/simulation/a2s_simulation/: a2s_cuda_device_state_space.cu  a2s_cuda_device_svm.cu  a2s_cuda_kernel_a2s.cu  a2s_cuda_kernel_calibration.cu
src/simulation/avg_simulation/: a2s_cuda_kernel_avg.cu
src/simulation/include/: a2s_device_function.h  a2s_global_function.h  a2s_header.h  a2s_parameters.h
src/simulation/parameter_variation/: cuda_device_ut.cu  parameter_variation  parameter_variation.cpp  parameter_variation_main.cpp
src/simulation/thermal_loss_simulation/: a2s_cuda_kernel_thermal.cu
src/simulation/utility/: a2s_cluster_merging.cpp  a2s_cuda_device.cu  a2s_cuda_functions.cpp  functions.cpp
src/slprj/_jitprj/: ssu8pQBG5z3QECsgfVr3T3C.l  ssu8pQBG5z3QECsgfVr3T3C.mat  svuZSl7VvWU5OUFysTqz6R.l  svuZSl7VvWU5OUFysTqz6R.mat
src/slprj/_sfprj/EMLReport/: sXa6gEWWuJCBAfE7ugVE7hD.mat  ssu8pQBG5z3QECsgfVr3T3C.mat  svuZSl7VvWU5OUFysTqz6R.mat
(+9 files in other folders)
